--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "fa": "^1.0.1",
+    "firebase": "^8.2.9",
+    "firebase-tools": "^9.6.0",
+    "react": "^18.1.0",
+    "react-bootstrap": "^1.5.1",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.12.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
