--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -13,6 +13,7 @@
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
+    "mongoose": "^6.7.0",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^18.1.0",
