--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.7.0",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.1",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
