--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -22,6 +22,7 @@
     "mui": "^0.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.1",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
