--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
