--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "nodemon src/index_test.js"
   },
   "eslintConfig": {
     "extends": [
