--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
+    "@appbaseio/reactivesearch": "^3.42.1",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -13,14 +13,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.21.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
+    "mui": "^0.0.1",
     "mongoose": "^6.7.0",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.1",
