--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -25,6 +25,7 @@
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
+    "js-cookie": "^3.0.1",
     "mui": "^0.0.1",
     "mongoose": "^6.7.0",
     "react": "^18.1.0",
