Fixed imports broken in rebase

--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -7,9 +7,6 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.7",
-    "@appbaseio/reactivesearch": "^3.42.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -25,9 +22,10 @@
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
+    "google-map-react": "^2.2.0",
     "js-cookie": "^3.0.1",
-    "mui": "^0.0.1",
     "mongoose": "^6.7.0",
+    "mui": "^0.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^1.5.1",
     "react-calendar": "^3.9.0",
