--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -2,6 +2,7 @@
   "name": "parkshark",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.42.1",
     "@emotion/core": "^11.0.0",
