--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -19,11 +19,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
     "express": "^4.18.2",
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "firebase-tools": "^9.6.0",
     "google-map-react": "^2.2.0",
+    "google-maps-react": "^2.0.6",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "mui": "^0.0.1",
@@ -36,6 +38,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.2.1",
+    "typescript-eslint": "0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
