--- a/parkshark/package.json
+++ b/parkshark/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^5.2.1",
+    "typescript-eslint": "0.0.1-alpha.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,6 +65,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.3"
   }
 }
